Added link to facerec project

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-acecle.github.io
+<html>
+  <head>
+    <title>acecle.github.io</title>
+  </head>
+  <body>
+    <h2><b>acecle.github.io</b></h2>
+    <hr>
+    <a href="https://acecle.github.io/facerec-client"><p>Facerec Project</p></a>
+  </body>
+</html>
