--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <title>acecle.github.io</title>
   </head>
   <body>
-    <h2><b>acecle.github.io</b></h2>
+    <h2 style="text-align: center; font-family:monospace; padding-top:5px"><b>acecle.github.io</b></h2>
     <hr>
-    <a href="https://acecle.github.io/facerec-client"><p>Facerec Project</p></a>
+    <p style="text-align: center; font-family:monospace"><a href="https://acecle.github.io/facerec-client">Facerec Project</a> - <a href="https://github.com/acecle/facerec-client">[Client]</a> / <a href="https://github.com/acecle/facerec-backend">[Server]</a></p>
   </body>
 </html>
